--- a/backend/.env
+++ b/backend/.env
@@ -17,4 +17,4 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 SESSION_SECRET=your-session-secret-key-change-this-in-production
 
 # Frontend URL for CORS and redirects
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://medi-bridge-ebon.vercel.app
