--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 # Google OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=353620055340-i4nv19h4o58j8jhvvkquhejcb6a5kjgd.apps.googleusercontent.com
+# Note: App URL is now dynamically determined by window.location.origin
 VITE_APP_URL=https://medi-bridge-ebon.vercel.app
